[modbus] Replace apache commons lang usage with plain java (#10002)
* [modbus] fix item creation in tests

Signed-off-by: Sami Salonen <ssalonen@gmail.com>
Signed-off-by: John Marshall <john.marshall.au@gmail.com>